# connect-four

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
board/: CMakeLists.txt
board/include/: board.h  board_serializer.h
board/src/: board.c  board_serializer.c
connect_four_core/: CMakeLists.txt
connect_four_core/include/: board.h  game.h  game_context.h  game_context_serializer.h  game_functionality.h  game_state.h  save_system.h
connect_four_core/src/: board.c  game.c  game_context.c  game_context_serializer.c  game_functionality.c  game_state.c  save_system.c
connect_four_game/: CMakeLists.txt
connect_four_game/src/: main.c
docs/: ProjectStructure.md  Specification.md
error_handling/: CMakeLists.txt
error_handling/include/: error_codes.h
tests/: CMakeLists.txt
tests/src/: test_board.c  test_board_serializer.c  test_game_context_serializer.c  test_game_state.c  test_id_generator.c  test_string_utility.c
utility/: CMakeLists.txt
utility/include/: id_generator.h  io_utility.h  string_utility.h
utility/src/: id_generator.c  io_utility.c  string_utility.c
